[gd_scene load_steps=5 format=3 uid="uid://cli2h0e3cso4o"]

[ext_resource type="Script" uid="uid://dfovibk18objb" path="res://scripts/ip_lookup_tool.gd" id="1_51ckl"]
[ext_resource type="Theme" uid="uid://cvjkotbfb80tq" path="res://assets/UIMainTheme.tres" id="2_dx23m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jehqg"]
border_width_left = 100
border_width_top = 100
border_width_right = 100
border_width_bottom = 100
border_blend = true

[sub_resource type="Theme" id="Theme_ukskx"]
HBoxContainer/constants/separation = 5
VBoxContainer/styles/Style = SubResource("StyleBoxFlat_jehqg")

[node name="IpLookupTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_51ckl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="SingleLookupPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_ukskx")
theme_override_constants/separation = 0
alignment = 1

[node name="SingleIpLookupBox" type="HBoxContainer" parent="HBoxContainer/SingleLookupPanel"]
layout_mode = 2
size_flags_vertical = 4

[node name="SingleIPText" type="TextEdit" parent="HBoxContainer/SingleLookupPanel/SingleIpLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8.8.8.8"

[node name="SingleIPButton" type="Button" parent="HBoxContainer/SingleLookupPanel/SingleIpLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dx23m")
text = "Execute Single IP
Lookup"

[node name="NetworkLookupBox" type="HBoxContainer" parent="HBoxContainer/SingleLookupPanel"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="NetworkLookupText" type="TextEdit" parent="HBoxContainer/SingleLookupPanel/NetworkLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8.8.8.8"

[node name="NetworkLookupButton" type="Button" parent="HBoxContainer/SingleLookupPanel/NetworkLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dx23m")
text = "Execute Single IP
Lookup"

[node name="ReportLookupBox" type="HBoxContainer" parent="HBoxContainer/SingleLookupPanel"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="ReportLookupText" type="TextEdit" parent="HBoxContainer/SingleLookupPanel/ReportLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "8.8.8.8"

[node name="ReportLookupButton" type="Button" parent="HBoxContainer/SingleLookupPanel/ReportLookupBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_dx23m")
text = "Execute Single IP
Lookup"

[node name="MultiIPPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/MultiIPPanel"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Multi IP Lookup List Here:"
horizontal_alignment = 1

[node name="MultiIPText" type="TextEdit" parent="HBoxContainer/MultiIPPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ToolOption" type="OptionButton" parent="HBoxContainer/MultiIPPanel"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
selected = 0
item_count = 4
popup/item_0/text = "Sentinel"
popup/item_0/id = 0
popup/item_1/text = "Defender"
popup/item_1/id = 1
popup/item_2/text = "Datadog"
popup/item_2/id = 2
popup/item_3/text = "Other"
popup/item_3/id = 3

[node name="MultiIPButton" type="Button" parent="HBoxContainer/MultiIPPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_dx23m")
text = "Execute"
